Adding preprocessor macros to allow for compile time change to display module version
* Refactored read_LCD_buttons to use macros
* Defined default macro values for display v1
* Define optional macro values for display v2
* Refactored platformio config with prod and stg envs

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,11 +7,25 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+[platformio]
+env_default = prod
 
-[env:uno]
+[common_env_data]
 platform = atmelavr
-board = uno
 framework = arduino
 lib_deps =
   DHT sensor library
   Adafruit Unified Sensor
+
+[env:prod]
+platform = ${common_env_data.platform}
+board = uno
+framework = ${common_env_data.framework}
+lib_deps = ${common_env_data.lib_deps}
+
+[env:test]
+platform = ${common_env_data.platform}
+board = uno
+framework = ${common_env_data.framework}
+lib_deps = ${common_env_data.lib_deps}
+build_flags = -DDISPLAY_V2 -DDHTTYPE=DHT11
