Including build args / defines in platformio config for serial debugger

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ env_default = prod
 [common_env_data]
 platform = atmelavr
 framework = arduino
+monitor_baud = 9600
 lib_deps =
   DHT sensor library
   Adafruit Unified Sensor
@@ -28,4 +29,4 @@ platform = ${common_env_data.platform}
 board = uno
 framework = ${common_env_data.framework}
 lib_deps = ${common_env_data.lib_deps}
-build_flags = -DDISPLAY_V2 -DDHTTYPE=DHT11
+build_flags = -DDISPLAY_V2 -DDHTTYPE=DHT11 -DSERIAL_DEBUG_V2
